// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`base > should create a base project 1`] = `
[
  "./test/path/.editorconfig",
  "./test/path/.gitignore",
  "./test/path/.prettierignore",
  "./test/path/package.json",
  "./test/path/pnpm-workspace.yaml",
  "./test/path/reset.d.ts",
  "./test/path/tsconfig.json",
  "./test/path/turbo.json",
]
`;

exports[`base > storybook > should create a storybook app 1`] = `
[
  "./test/path/.editorconfig",
  "./test/path/.gitignore",
  "./test/path/.prettierignore",
  "./test/path/package.json",
  "./test/path/pnpm-workspace.yaml",
  "./test/path/reset.d.ts",
  "./test/path/tsconfig.json",
  "./test/path/turbo.json",
  "./test/path/apps/storybook/package.json",
  "./test/path/apps/storybook/tsconfig.json",
  "./test/path/apps/storybook/turbo.json",
  "./test/path/apps/storybook/config/main.ts",
  "./test/path/apps/storybook/config/preview.ts",
  "./test/path/apps/storybook/stories/examples/Button.stories.tsx",
]
`;

exports[`base > swagger-sdk > should create a swagger-sdk module 1`] = `
[
  "./test/path/.editorconfig",
  "./test/path/.gitignore",
  "./test/path/.prettierignore",
  "./test/path/package.json",
  "./test/path/pnpm-workspace.yaml",
  "./test/path/reset.d.ts",
  "./test/path/tsconfig.json",
  "./test/path/turbo.json",
  "./test/path/packages/swagger-sdk/generateExports.ts",
  "./test/path/packages/swagger-sdk/orval.config.ts",
  "./test/path/packages/swagger-sdk/package.json",
  "./test/path/packages/swagger-sdk/tsconfig.json",
  "./test/path/packages/swagger-sdk/tsup.config.ts",
  "./test/path/packages/swagger-sdk/turbo.json",
]
`;

exports[`base > web > should create a web app 1`] = `
[
  "./test/path/.editorconfig",
  "./test/path/.gitignore",
  "./test/path/.prettierignore",
  "./test/path/package.json",
  "./test/path/pnpm-workspace.yaml",
  "./test/path/reset.d.ts",
  "./test/path/tsconfig.json",
  "./test/path/turbo.json",
  "./test/path/apps/web/next.config.mjs",
  "./test/path/apps/web/package.json",
  "./test/path/apps/web/sentry.client.config.ts",
  "./test/path/apps/web/sentry.config.ts",
  "./test/path/apps/web/sentry.edge.config.ts",
  "./test/path/apps/web/sentry.server.config.ts",
  "./test/path/apps/web/tsconfig.json",
  "./test/path/apps/web/turbo.json",
  "./test/path/apps/web/src/pages/_app.tsx",
  "./test/path/apps/web/src/pages/index.tsx",
]
`;

exports[`base > web > stitches > should add a stitches module 1`] = `
[
  "./test/path/.editorconfig",
  "./test/path/.gitignore",
  "./test/path/.prettierignore",
  "./test/path/package.json",
  "./test/path/pnpm-workspace.yaml",
  "./test/path/reset.d.ts",
  "./test/path/tsconfig.json",
  "./test/path/turbo.json",
  "./test/path/apps/web/next.config.mjs",
  "./test/path/apps/web/package.json",
  "./test/path/apps/web/sentry.client.config.ts",
  "./test/path/apps/web/sentry.config.ts",
  "./test/path/apps/web/sentry.edge.config.ts",
  "./test/path/apps/web/sentry.server.config.ts",
  "./test/path/apps/web/tsconfig.json",
  "./test/path/apps/web/turbo.json",
  "./test/path/packages/stitches/package.json",
  "./test/path/packages/stitches/tsconfig.json",
  "./test/path/packages/stitches/tsup.config.ts",
  "./test/path/packages/stitches/src/index.ts",
  "./test/path/packages/stitches/src/reset.css",
  "./test/path/packages/stitches/src/stitches.ts",
  "./test/path/packages/stitches/src/types.ts",
  "./test/path/apps/web/src/pages/_app.tsx",
  "./test/path/apps/web/src/pages/_document.tsx",
  "./test/path/apps/web/src/pages/index.tsx",
  "./test/path/packages/stitches/src/helpers/createRangeVariant.ts",
  "./test/path/packages/stitches/src/helpers/createScaleVariant.ts",
]
`;

exports[`base > web > stitches > trpc > should add a trpc module 1`] = `
[
  "./test/path/.editorconfig",
  "./test/path/.gitignore",
  "./test/path/.prettierignore",
  "./test/path/package.json",
  "./test/path/pnpm-workspace.yaml",
  "./test/path/reset.d.ts",
  "./test/path/tsconfig.json",
  "./test/path/turbo.json",
  "./test/path/apps/web/next.config.mjs",
  "./test/path/apps/web/package.json",
  "./test/path/apps/web/package.stitches.json",
  "./test/path/apps/web/sentry.client.config.ts",
  "./test/path/apps/web/sentry.config.ts",
  "./test/path/apps/web/sentry.edge.config.ts",
  "./test/path/apps/web/sentry.server.config.ts",
  "./test/path/apps/web/tsconfig.json",
  "./test/path/apps/web/turbo.json",
  "./test/path/packages/stitches/package.json",
  "./test/path/packages/stitches/tsconfig.json",
  "./test/path/packages/stitches/tsup.config.ts",
  "./test/path/packages/trpc/package.json",
  "./test/path/packages/trpc/tsconfig.json",
  "./test/path/packages/trpc/tsup.config.ts",
  "./test/path/packages/stitches/src/index.ts",
  "./test/path/packages/stitches/src/reset.css",
  "./test/path/packages/stitches/src/stitches.ts",
  "./test/path/packages/stitches/src/types.ts",
  "./test/path/packages/trpc/src/index.ts",
  "./test/path/packages/trpc/src/trpc.ts",
  "./test/path/apps/web/src/pages/_app.stitches.tsx",
  "./test/path/apps/web/src/pages/_app.tsx",
  "./test/path/apps/web/src/pages/_document.tsx",
  "./test/path/apps/web/src/pages/index.tsx",
  "./test/path/apps/web/src/utils/trpc.ts",
  "./test/path/packages/stitches/src/helpers/createRangeVariant.ts",
  "./test/path/packages/stitches/src/helpers/createScaleVariant.ts",
  "./test/path/packages/trpc/src/router/index.ts",
  "./test/path/packages/trpc/src/router/example/hello.ts",
  "./test/path/apps/web/src/pages/api/trpc/[trpc].ts",
]
`;

exports[`base > web > trpc > should add a trpc module 1`] = `
[
  "./test/path/.editorconfig",
  "./test/path/.gitignore",
  "./test/path/.prettierignore",
  "./test/path/package.json",
  "./test/path/pnpm-workspace.yaml",
  "./test/path/reset.d.ts",
  "./test/path/tsconfig.json",
  "./test/path/turbo.json",
  "./test/path/apps/web/next.config.mjs",
  "./test/path/apps/web/package.json",
  "./test/path/apps/web/sentry.client.config.ts",
  "./test/path/apps/web/sentry.config.ts",
  "./test/path/apps/web/sentry.edge.config.ts",
  "./test/path/apps/web/sentry.server.config.ts",
  "./test/path/apps/web/tsconfig.json",
  "./test/path/apps/web/turbo.json",
  "./test/path/packages/trpc/package.json",
  "./test/path/packages/trpc/tsconfig.json",
  "./test/path/packages/trpc/tsup.config.ts",
  "./test/path/packages/trpc/src/index.ts",
  "./test/path/packages/trpc/src/trpc.ts",
  "./test/path/apps/web/src/pages/_app.tsx",
  "./test/path/apps/web/src/pages/index.tsx",
  "./test/path/apps/web/src/utils/trpc.ts",
  "./test/path/packages/trpc/src/router/index.ts",
  "./test/path/packages/trpc/src/router/example/hello.ts",
  "./test/path/apps/web/src/pages/api/trpc/[trpc].ts",
]
`;
